tdf#131209 reload the notebook bar

Change-Id: Id5a1b63c0f907a8f20406d2fa1c08c1aff34b91c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/91702
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>